{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "cfdf63f8-1c6f-47d6-98cd-48f1fb650623",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "de99bec8-dfc1-4016-ba5f-9a7aae508873",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Drag",
                    "type": "Button",
                    "id": "38561400-eb1a-4ef4-a3f1-77bac069499e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "c33c0754-2c3e-4021-8e7d-ed7fd7cd580f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3b33b31-7e7d-4d34-96ad-637fe56cee8f",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17a629d2-914a-4845-ab43-8a8defd739bb",
                    "path": "<Pointer>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a8ca4a4-0ff0-48fc-bf97-131fd9147481",
                    "path": "<Pointer>/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Hotkeys",
            "id": "79877735-2a52-412a-81ef-08710c494609",
            "actions": [
                {
                    "name": "ReloadScene",
                    "type": "Button",
                    "id": "51263c92-fcda-499b-a146-4adff4fbbfba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SaveProgress",
                    "type": "Button",
                    "id": "08cf6d96-ada9-4d49-bf3a-31014b1bb846",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LoadProgress",
                    "type": "Button",
                    "id": "0c26b699-6b94-4642-9ed5-8abdb3f1a248",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShowCombinations",
                    "type": "Button",
                    "id": "43394b26-e0f3-4222-9b8c-29647f6106a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ReturnToMenu",
                    "type": "Button",
                    "id": "ca6dc784-fe50-40e9-a88a-d8b74eb9d3d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b9b14ee0-70c0-41fb-a137-60eed892f1c1",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10d3af76-1205-4dc2-a901-07a735cbf017",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoadProgress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f15aedb-1ef2-4c6d-96d6-a34f58b05288",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowCombinations",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dec56899-e023-4065-89d3-6095464cd3f8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaveProgress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80d77ebf-b1c9-4529-919b-3d5839e4a782",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnToMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}